# AstroSpace

./: .gitignore  Dockerfile  Dockerfile_dev  README.md  hatch.ps1  pyproject.toml  requirements.txt  test.json
AstroSpace/: .dockerignore  __init__.py  __main__.py  auth.py  blog.py  blog_posts.py  config.py  constants.py  db.py  logging_utils.py  package-lock.json  schema.sql  tailwind.config.js
AstroSpace/migrations/: env.py
AstroSpace/migrations/versions/: 20260325_0001_baseline.py  20260325_0001_baseline.sql  20260325_0002_runtime_schema_cleanup.py  20260326_0003_starless_and_related_media.py  20260326_0004_anonymous_engagement.py
AstroSpace/profile/: private.py  public.py
AstroSpace/repositories/: blog_posts.py  images.py
AstroSpace/services/: authorization.py  collection_filters.py  content.py  cookies.py  engagement.py  uploads.py
AstroSpace/static/: input.css  styles.css
AstroSpace/static/js/: binds.js  consent.js  fitsUtils.js  phd2Plotly.js  plotHR.js  subFramePlot.js  utils.js
AstroSpace/templates/: base.html  blog_detail.html  blog_list.html  collection.html  cookie_policy.html  create.html  create_blog.html  home.html  image_detail.html  list_images.html  profile.html  public_profile.html  user_posts.html
AstroSpace/utils/: blog_form.py  moon_phase.py  phd2logparser.py  platesolve.py  queries.py  simbad_object_description.json  utils.py  xisf_reader.py
docs/: getting-started.md
nginx/: .env.example  docker-compose.yml  nginx.conf
tests/: conftest.py  test_admin_maintenance.py  test_browser_assets.py  test_collection_filters.py  test_content_service.py  test_cookie_engagement.py  test_db_migrations.py  test_debug_logging.py  test_image_detail_navigation.py  test_issue_1.py  test_phd2_plotly.py  test_plate_orientation.py  test_routes.py  test_uploads.py
(+1 files in other folders)
